# flux9s

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  README.md  SECURITY.md  justfile  manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  live-tests.yml  prepare-release.yml  release.yml
crds/: source-watcher.crds.yaml
docs/content/configuration/: _index.md
docs/content/user-guide/: _index.md
scripts/: dev-clusters.sh
scripts/dev-manifests/: fluxinstance-medium.yaml  fluxinstance.yaml
scripts/dev-manifests/simple/: kustomize.yaml  operator.yaml  source-watcher.yaml
scripts/dev-manifests/stress/: operator.yaml.tpl
src/: constants.rs  editor.rs  lib.rs  main.rs  operations.rs
src/config/: mod.rs  schema.rs
src/kube/: api.rs  inventory.rs  mod.rs  workloads.rs
src/models/: flux_resource_kind.rs
src/models/_generated/: flux_operator_fluxinstances.rs  flux_operator_fluxreports.rs  flux_operator_resourcesetinputproviders.rs  flux_operator_resourcesets.rs  helm_controller.rs  image_automation_controller.rs  image_reflector_controller.rs  kustomize_controller.rs  notification_controller.rs  source_controller.rs  source_watcher.rs
src/trace/: graph.rs  graph_builder.rs
src/tui/: commands.rs  keybindings.rs  mod.rs  submenu.rs
src/tui/app/: async_ops.rs  core.rs  events.rs  mod.rs  rendering.rs  state.rs
src/tui/views/: detail.rs  graph.rs  help.rs  mod.rs  pulse.rs  quit_confirm.rs  submenu.rs  workloads.rs
src/watcher/: mod.rs  state.rs
tests/: live_tests.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__render_footer_navigation.snap
